; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_update_xmalloc_stat_alloc.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_update_xmalloc_stat_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_used_memory = common dso_local global i32 0, align 4
@_memory_block = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64)* @update_xmalloc_stat_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_xmalloc_stat_alloc(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @ATOM_ADD(i32* @_used_memory, i64 %6)
  %8 = call i32 @ATOM_INC(i32* @_memory_block)
  %9 = load i32, i32* %3, align 4
  %10 = call i32* @get_allocated_field(i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @ATOM_ADD(i32* %14, i64 %15)
  br label %17

17:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @ATOM_ADD(i32*, i64) #1

declare dso_local i32 @ATOM_INC(i32*) #1

declare dso_local i32* @get_allocated_field(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
